@@ -6,6 +6,8 @@ Gora Change Log
 
 trunk (current development)
 
+* GORA-172 java.lang.ClassNotFoundException: org.apache.gora.memory.store.MemStore.MemQuery (yumeng via lewismc)
+
 * GORA-103 Datastore for gora-dynamodb (rmarroquin via lewismc)
 
 * GORA-160 Gora Fails to Import Into Recent Versions of Eclipse (Ed Kohlwey via lewismc)
